<resources>
    <string name="app_name">Radio Beach</string>
    <string name="only_hit">Только Хиты</string>
    <string name="info">Радио Пляж - это первая интернет радиостанция и круглосуточно новая музыка \n~\n интересные передачи \n~\n профессиональные ведущие \n~\n радио звучит везде, где есть интернет! \n~\n открыта к новым проектам и сотрудничеству Вещание стартовало в 2013 году 13 октября \n~~~\n Основатель радио Александр Юрченко</string>
    <string name="info_premium">Эфир + ротация (30 дней )\n30 .000 минус 50 % - 14.999 р</string>
    <string name="detail_premium">- Интервью\n- Ротация вашего трека на 30 дней ( 2 раза в день)\n- Ваша реклама на всех платформах соц.сетей с указанием ссылки \n- Размещение афиши на вас в официальную группу в ВК ,вашей песни или видео клипа\n- Размещение на цифровые площадки Сила нашего эфирного времени,как средство наиболее эффективного вида вашей рекламы: \n- Гарантия узнаваемости. Как внутри нашей страны ,так и за ее пределами. \n- Пиар в соц.сетях \n- Новых заинтересованных подписчиков вашего творчества \n- Лайки и комментарии \n- Возможность заинтересовать потенциальных клиентов для выгодных предложений</string>
    <string name="info_classic">Эфир ротация ( 5 дней )\n8.000 р</string>
    <string name="detail_classic">- Интервью\n- Презентация вашей песни в эфире\n- Размещение вашей афиши в официальной группе в ВК со ссылкой на ваш аккаунт\n- 5 дней ротации 2 раза в день Сила нашего эфирного времени,как средство наиболее эффективного вида вашей рекламы:\n- Гарантия узнаваемости. \nКак внутри нашей страны ,так и за ее пределами. \n- Пиар в соц.сетях\n- Привлечение новых заинтересованных подписчиков вашего творчества\n- Лайки и комментарии\n- Возможность заинтересовать потенциальных клиентов для выгодных предложений</string>
    <string name="info_culture">Эфир + размещение вашей рекламы\n14.999 р</string>
    <string name="detail_culture">- Интервью\n- Ваша реклама на всех платформах соц.сетей с указанием ссылки\n- Размещение афиши на вас в официальную группу в ВК радиостанции ,с указанием вашего творчества и иного материала.\n- Пиар в сторис в ведущего ( 90 тыс.подписчиков )\n- Повтор эфира на радио в записи.\nСила эфирного времени ,как средство наиболее эффективного вида вашей рекламы на целевую аудиторию страны. \n- Гарантия узнаваемости.\n- Пиар в соц.сетях\n- Лайки и комментарии\n- Привлечение новых заинтересованных подписчиков к вашей деятельности.\n- Возможность заинтересовать потенциальных клиентов для выгодных предложений</string>
    <string name="detail_profi">Ваша реклама на радио Создание профессиональной аудиорекламы:\n- Игровой\n- Информационной\n- Имиджевой\n- Музыкальной Создание и заказ рекламы именно у нас\n-это эффективный и гарантированный способ получения желаемых результатов!\nСоздание в течении 10 часов</string>
    <string name="pay_info">Данные условия использования подписку мобильного приложения «Radio Beach» (Радио Пляж) представляют собой брать полную ответственность на себя за оплаченные суммы на ПОДПИСКУ. Представители приложение «Radio Beach» (Радио Пляж) не будут нести ответственность за потерянные вами информациями и денежными средствами, так как мы не будем хранить ваши данные в облаках или серверных хранилищах. Представители приложение «Radio Beach» (Радио Пляж) вас убедительно просить не удалять приложение, так как, все данные включая информации о платеже за подписку будут храниться на самом телефоне. Подтверждая Согласие на все условия приложение вы берете на себя все ответственность за все дальнейшие действие!
    </string>
</resources>