<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context="com.alexandr_yurchenko.radiobeach.ServiceActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="16dp"
                android:elevation="15dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgPremium"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/premium" />

                    <TextView
                        android:id="@+id/textPremium"
                        android:layout_alignTop="@id/imgPremium"
                        android:layout_marginTop="96dp"
                        android:layout_marginHorizontal="16dp"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:text="ПАКЕТ PREMIUM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/infoPremium"
                        android:text="@string/info_premium"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_below="@id/imgPremium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <View
                        android:id="@+id/devider"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="32dp"
                        android:layout_below="@id/infoPremium"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>

                    <TextView
                        android:id="@+id/detailPremium"
                        android:text="@string/detail_premium"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textAlignment="textStart"
                        android:layout_marginHorizontal="16dp"
                        android:layout_below="@id/devider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/devider1"
                android:layout_marginVertical="8dp"
                android:layout_below="@id/infoPremium"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="16dp"
                android:elevation="15dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgClassic"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/classic" />

                    <TextView
                        android:id="@+id/textClassic"
                        android:layout_alignTop="@id/imgClassic"
                        android:layout_marginTop="6dp"
                        android:layout_marginHorizontal="16dp"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:text="ПАКЕТ CLASSIC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/infoClassic"
                        android:text="@string/info_classic"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_below="@id/imgClassic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <View
                        android:id="@+id/deviderClassic"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="32dp"
                        android:layout_below="@id/infoClassic"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>

                    <TextView
                        android:id="@+id/detailClassic"
                        android:text="@string/detail_classic"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textAlignment="textStart"
                        android:layout_marginHorizontal="16dp"
                        android:layout_below="@id/deviderClassic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/devider2"
                android:layout_marginVertical="8dp"
                android:layout_below="@id/infoPremium"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="16dp"
                android:elevation="15dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgCulture"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/culture" />

                    <TextView
                        android:id="@+id/textCulture"
                        android:layout_alignTop="@id/imgCulture"
                        android:layout_marginTop="200dp"
                        android:layout_marginHorizontal="16dp"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:text="ПАКЕТ CULTURE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/infoCulture"
                        android:text="@string/info_culture"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_below="@id/imgCulture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <View
                        android:id="@+id/deviderCulture"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="32dp"
                        android:layout_below="@id/infoCulture"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>

                    <TextView
                        android:id="@+id/detailCulture"
                        android:text="@string/detail_culture"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textAlignment="textStart"
                        android:layout_marginHorizontal="16dp"
                        android:layout_below="@id/deviderCulture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/devider3"
                android:layout_marginVertical="8dp"
                android:layout_below="@id/infoPremium"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="16dp"
                android:elevation="15dp"
                android:layout_margin="8dp"
                android:layout_marginBottom="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgProfi"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profi" />

                    <TextView
                        android:id="@+id/textProfi"
                        android:layout_alignTop="@id/imgProfi"
                        android:layout_marginTop="170dp"
                        android:layout_marginHorizontal="16dp"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="СОЗДАНИЕ ПРОФЕССИОНАЛЬНОЙ АУДИОРЕКЛАМЫ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/infoProfi"
                        android:text="Стоимость - от 4000 руб"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_below="@id/imgProfi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <View
                        android:id="@+id/deviderProfi"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="32dp"
                        android:layout_below="@id/infoProfi"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>

                    <TextView
                        android:id="@+id/detailProfi"
                        android:text="@string/detail_profi"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textAlignment="textStart"
                        android:layout_marginHorizontal="16dp"
                        android:layout_below="@id/deviderProfi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>